ci_cd_course/5_remote_ansible_from_circleci/template.yml
AWSTemplateFormatVersion: '2010-09-09'
Description: >
  This CloudFormation template is a basic template to showcase creating infrastructure as the result of a CircleCI job,
  and then using Ansible to configure the instance.

Parameters:
  EnvironmentName:
    Description: An environment name that will be prefixed to resource names
    Type: String
  AMIID:
    Description: The AMI to use for our web server
    Type: String
  KEYPAIRID:
    Description: The key pair to use to spin up the EC2 instance
    Type: String
  CircleCIWorkflowID:
    Description: The CircleCIWorkflowID
    Type: String

Resources:
  InstanceSecurityGroup:
    Type: AWS::EC2::SecurityGroup
    Properties:
      GroupDescription: Security group for EC2 instance to enable SSH access via port 22
      SecurityGroupIngress:
        - IpProtocol: tcp
          FromPort: 22
          ToPort: 22
          CidrIp: 0.0.0.0/0
          Description: Enable SSH access via port 22
        - IpProtocol: tcp
          FromPort: 3000
          ToPort: 3000
          CidrIp: 0.0.0.0/0
          Description: Enable HTTP access via port 3000 for our website.

      Tags:
        - Key: Name
          Value: !Sub ${EnvironmentName}-SG-CircleCI-${CircleCIWorkflowID}

  EC2Instance:
    Type: AWS::EC2::Instance
    Properties:
      SecurityGroups:
        - !Ref InstanceSecurityGroup
      KeyName: !Ref KEYPAIRID
      ImageId: !Ref AMIID
      InstanceType: t3.micro
      Tags:
        - Key: Name
          Value: !Sub ${EnvironmentName}-EC2Instance-CircleCI-${CircleCIWorkflowID}

Outputs:
  EC2IP:
    Description: The public IPv4 address of the EC2 instance that we spun up our application on. This IP will be used in the smoke test when CD tries to connect to the application to make sure it works
    Value: !GetAtt EC2Instance.PublicIp
    Export:
      Name: !Sub ${EnvironmentName}-WebAppIp-CircleCI-${CircleCIWorkflowID}
